--- a/fixgw/config/default.yaml
+++ b/fixgw/config/default.yaml
@@ -14,7 +14,8 @@ initialization files:
   # - "{CONFIG}/default.ini"
   # - "{CONFIG}/c170b.ini"
   # - "{CONFIG}/fg_172.ini"
-  - "{CONFIG}/rotax582.ini"
+  # - "{CONFIG}/rotax582.ini"
+- "{CONFIG}/dummy.ini"
 
 # Connections:
 # if 'load' is 'yes' the connection plugin will be loaded at program start
@@ -304,7 +305,7 @@ connections:
     model: 2004
 
   stratux:
-    load: yes
+    load: no
     module: fixgw.plugins.stratux
 
 # Logging configuration - See Python logging.config module documenation
